--- a/src/app/pages/dnd5e-sheets/tabs/builder/builder.component.html
+++ b/src/app/pages/dnd5e-sheets/tabs/builder/builder.component.html
@@ -23,7 +23,7 @@
       <div class="max-500 auto-margin">
         <h1 class="gh1">Character Builder</h1>
         <h2 class="gsh3">Welcome to the Beyond Tabletop D&amp;D 5E Character builder. This view will guide you through character creation and leveling up. The builder is beneficial for all players, but is especially helpful for players new to D&amp;D.</h2>
-        <div class="text-center">
+        <div class="text-center" *ngIf="false">
           <div class="bm-20">
             <a routerLink="/donate" class="button button-cyan button-large text-center"><fa-icon [icon]="['fas', 'star']"></fa-icon> Upgrade Now for 10</a>
           </div>
